# storeops_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  solver.py
data/: office_demo_sample.csv  synthetic_benchmark.csv  synthetic_generated.csv  synthetic_seed.csv
scripts/: build_real_sample.py  deploy_hf_space.py  generate_synthetic_data.py  submission_smoke_test.sh
server/: __init__.py  analytics_engine.py  app.py  query_service.py  storeops_environment.py
server/static/: app.js  index.html  styles.css
tests/: test_analytics_engine.py  test_app_routes.py  test_query_service.py  test_storeops_environment.py
